# invest-smart

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  DATABASE_ENRICHMENT_GUIDE.md  GOLIATH_V1_Technical_Reference.md  LICENSE  MONEYMAKER_MASTER_REMEDIATION_PLAN.md  README.md  SECURITY.md  console-plan.md  requirements.txt  setup-venv.ps1
program/services/algo-engine/: Dockerfile  README.md  pyproject.toml
program/services/algo-engine/src/algo_engine/: __init__.py  config.py  engine.py  grpc_client.py  kill_switch.py  main.py  maturity_gate.py  portfolio.py  zmq_adapter.py
program/services/algo-engine/src/algo_engine/alerting/: __init__.py  dispatcher.py  telegram.py
program/services/algo-engine/src/algo_engine/analytics/: __init__.py  attribution.py  historical_edge.py
program/services/algo-engine/src/algo_engine/backtesting/: __init__.py  data_loader.py  engine.py  metrics.py  simulator.py
program/services/algo-engine/src/algo_engine/features/: __init__.py  belief_state.py  data_quality.py  economic_calendar.py  feature_scorer.py  macro_features.py  mtf_analyzer.py  mtf_confirmation.py  (+5 more)
program/services/algo-engine/tests/: conftest.py
program/services/algo-engine/tests/integration/: conftest.py  test_drawdown_integration.py  test_e2e_safety_chain.py  test_full_pipeline.py  test_kill_switch_integration.py  test_spiral_integration.py  test_validation_integration.py
program/services/algo-engine/tests/unit/: test_adaptive_trend_extended.py  test_advanced_sizer.py  test_attribution.py  test_backtesting.py  test_belief_state.py  test_build_router.py  test_composite_confidence.py  test_config.py  test_correlation.py  test_data_loader.py  test_data_quality.py  test_defensive.py  test_dispatcher.py  test_economic_calendar.py  test_feature_scorer.py  test_features_remaining.py  test_grpc_client.py  test_historical_edge.py  test_kill_switch.py  test_kill_switch_extended.py  test_macro_features.py  test_math_bayesian.py  test_math_copula.py  test_math_extreme_value.py  test_math_fractal.py  test_math_information_theory.py  test_math_modules.py  test_math_ou_process.py  test_math_spectral.py  test_math_stochastic.py  test_maturity_gate.py  test_mean_reversion.py  test_mtf_analyzer.py  test_mtf_confirmation.py  test_optimization.py  test_ou_mean_reversion_extended.py  test_pipeline.py  test_portfolio.py  test_portfolio_extended.py  test_position_sizer.py  (+19 more)
program/services/console/: README.md  moneymaker_console.py  pyproject.toml
program/services/console/src/moneymaker_console/: __init__.py  app.py  console_logging.py  registry.py  runner.py
program/services/console/tests/: conftest.py  test_app.py  test_cli_dispatch.py  test_cli_parser.py  test_client_factory.py  test_clients_factory.py  test_commands_alert.py  test_commands_audit.py  test_commands_brain.py  test_commands_build.py  test_commands_config.py  test_commands_data.py  test_commands_exit.py  test_commands_help.py  test_commands_init.py  test_commands_kill.py  test_commands_log_ops.py  test_commands_maint.py  test_commands_market.py  test_commands_mt5.py  test_commands_perf.py  test_commands_portfolio.py  test_commands_risk.py  test_commands_signal.py  test_commands_svc.py  test_commands_sys_ops.py  test_commands_test_cmds.py  test_commands_tool.py  test_console_logging.py  test_registry.py  test_runner.py  test_tui_imports.py  test_tui_theme.py  test_tui_widgets.py
program/services/dashboard/: Dockerfile  pyproject.toml  run-dashboard.sh
program/services/dashboard/backend/: config.py  main.py
program/services/dashboard/backend/db/: connection.py
program/services/dashboard/backend/models/: schemas.py
program/services/dashboard/backend/redis_client/: client.py
program/services/dashboard/backend/tests/: conftest.py  test_config.py  test_economic.py  test_health.py  test_health_real.py  test_macro.py  test_market_data.py  test_ml_models.py  test_overview.py  test_risk.py  test_schemas.py  test_serializers.py  test_strategy.py  test_system.py  test_trading.py  test_websocket.py  test_ws_manager.py
program/services/dashboard/backend/ws/: manager.py  streams.py
program/services/dashboard/frontend/: README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
program/services/dashboard/frontend/src/: App.tsx  index.css
program/services/external-data/: Dockerfile  README.md  pyproject.toml  requirements.txt
program/services/external-data/src/external_data/: __init__.py  config.py  main.py  scheduler.py
program/services/external-data/tests/: conftest.py  test_config.py  test_main.py  test_scheduler.py
program/services/external-data/tests/test_providers/: test_cboe.py  test_cftc.py  test_fred.py
program/services/mt5-bridge/: Dockerfile  README.md  pyproject.toml
program/services/mt5-bridge/src/mt5_bridge/: __init__.py  config.py  connector.py  grpc_server.py  main.py  order_manager.py  position_tracker.py  trade_recorder.py
program/services/mt5-bridge/tests/: conftest.py
program/services/mt5-bridge/tests/integration/: test_config_real.py  test_grpc_real.py  test_trade_recorder_real.py
program/services/mt5-bridge/tests/unit/: test_config.py  test_connector.py  test_grpc_mappings.py  test_grpc_servicer.py  test_main_imports.py  test_order_manager.py  test_order_validation.py  test_position_tracker.py  test_trade_recorder.py
program/shared/proto/: Makefile  execution.proto  health.proto  market_data.proto  pyproject.toml  trading_signal.proto
program/shared/python-common/: pyproject.toml
program/shared/python-common/src/moneymaker_common/: __init__.py  audit.py  audit_pg.py  config.py  decimal_utils.py  enums.py  exceptions.py  grpc_credentials.py  health.py  logging.py  metrics.py  ratelimit.py  secrets.py
program/shared/python-common/tests/: test_audit.py  test_audit_pg.py  test_audit_pg_real.py  test_config.py  test_decimal_utils.py  test_enums.py  test_exceptions.py  test_grpc_credentials.py  test_grpc_credentials_real.py  test_health.py  test_logging.py  test_metrics.py  test_ratelimit.py  test_secrets.py  test_secrets_real.py
(+437 files in other folders)
