[project]
name = "moneymaker-algo-engine"
version = "0.1.0"
description = "MONEYMAKER V1 Pure Algorithmic Trading Engine"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    "moneymaker-common",
    "moneymaker-proto",

    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "structlog>=23.2,<25.0",
    "prometheus-client>=0.19,<1.0",
    "grpcio>=1.60,<2.0",
    "protobuf>=4.25,<7.0",
    "pyzmq>=25.1,<27.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.11,<2.0",
    "pywavelets>=1.5,<2.0",
    "arch>=6.0,<8.0",
    "redis>=5.0,<6.0",
    "sqlalchemy>=2.0,<3.0",
    "sqlmodel>=0.0.16,<1.0",
    "asyncpg>=0.29,<1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
