[project]
name = "moneymaker-console"
version = "2.0.0"
description = "MONEYMAKER Trading Console — Unified ecosystem command center"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
full = [
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "httpx>=0.27",
    "grpcio>=1.60",
    "psutil>=5.9",
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
moneymaker = "moneymaker_console.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
