[project]
name = "moneymaker-dashboard"
version = "0.1.0"
description = "MONEYMAKER V1 Dashboard - Unified monitoring and trading visualization"
requires-python = ">=3.10"
license = {text = "Proprietary"}

dependencies = [
    "moneymaker-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "asyncpg>=0.30",
    "redis>=5.0",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<6.0",
    "httpx>=0.28",
    "ruff>=0.2,<1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
