[project]
name = "moneymaker-external-data"
version = "1.0.0"
description = "MONEYMAKER External Data Service — Macro data ingestion"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-timeout>=2.2,<3.0",
    "respx>=0.21,<1.0",
    "black>=23.12,<25.0",
    "ruff>=0.4,<1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]
timeout = 30
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:google.protobuf.*",
    "ignore::UserWarning:pydantic.*",
]
