[project]
name = "moneymaker-mt5-bridge"
version = "1.0.0"
description = "MONEYMAKER V1 MetaTrader 5 Bridge - Trade execution layer"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Renan Augusto Macena"}]
readme = "README.md"

dependencies = [
    "moneymaker-common",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "structlog>=23.2,<25.0",
    "prometheus-client>=0.19,<1.0",
    "grpcio>=1.60,<2.0",
    "protobuf>=4.25,<7.0",
    "redis>=5.0,<6.0",
    "asyncpg>=0.29,<1.0",
]

[project.optional-dependencies]
mt5 = [
    "MetaTrader5>=5.0.45",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-mock>=3.12,<4.0",
    "pytest-xdist>=3.5,<4.0",
    "pytest-timeout>=2.2,<3.0",
    "black>=23.12,<25.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.8,<2.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]
markers = [
    "slow: tests taking >5s (deselect with -m 'not slow')",
    "integration: requires real components",
]
timeout = 30
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:google.protobuf.*",
    "ignore::DeprecationWarning:pkg_resources.*",
]
