[project]
name = "moneymaker-common"
version = "0.1.0"
description = "MONEYMAKER V1 Shared Python Utilities"
requires-python = ">=3.10"
license = {text = "Proprietary"}

dependencies = [
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "structlog>=23.2,<25.0",
    "prometheus-client>=0.19,<1.0",
    "redis>=5.0,<6.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
